tao rráp của tao xong của mày nó ko chạy được jquery nữa thì phải. với lại tao phải đưa vài cái script vào trong thẻ head nó mới chạy được

--- a/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
@@ -146,6 +146,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
@@ -212,6 +213,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\AdminLTE.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -296,6 +298,8 @@
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -303,6 +307,7 @@
     <Content Include="Scripts\lumino.glyphs.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\pages\category-management.js" />
+    <Content Include="Scripts\pages\my-profile.js" />
     <Content Include="Scripts\pages\product-management.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
@@ -323,6 +328,11 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Category\CategoryManagement.cshtml" />
     <Content Include="Views\Product\ProductManagement.cshtml" />
+    <Content Include="Views\Shared\Login_LayoutPage.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\UserMenuPartial.cshtml" />
+    <Content Include="Views\Employee\EmployeeManagement.cshtml" />
+    <Content Include="Views\Employee\Profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
