--- a/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
@@ -336,6 +336,7 @@
     <Content Include="Views\Employee\EmployeeManagement.cshtml" />
     <Content Include="Views\Employee\Profile.cshtml" />
     <Content Include="Views\Product\_ProductInsert.cshtml" />
+    <Content Include="Views\Product\_ProductUpdate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
