--- a/AutoAncillariesLimited/AutoAncillariesLimited/bin/AutoAncillariesLimited.dll.config
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/bin/AutoAncillariesLimited.dll.config
@@ -61,8 +61,8 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="AALEntities" connectionString="metadata=res://*/Models.AALModel.csdl|res://*/Models.AALModel.ssdl|res://*/Models.AALModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AAL;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="AALEntities" connectionString="metadata=res://*/Models.AALModel.csdl|res://*/Models.AALModel.ssdl|res://*/Models.AALModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AAL;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
