--- a/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImportBillController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="Global.asax.cs">
@@ -183,6 +184,8 @@
     <Compile Include="Models\Customer.cs">
       <DependentUpon>AALModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Dao\ImportBillDao.cs" />
+    <Compile Include="Models\Dao\ImportBillDetailDao.cs" />
     <Compile Include="Models\Employee.cs">
       <DependentUpon>AALModel.tt</DependentUpon>
     </Compile>
@@ -209,6 +212,7 @@
     <Compile Include="Models\Supplier.cs">
       <DependentUpon>AALModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\View_Models\ImportBillViewModel.cs" />
     <Compile Include="Models\View_Models\ProductViewModel.cs" />
     <Compile Include="Models\Warehouse.cs">
       <DependentUpon>AALModel.tt</DependentUpon>
@@ -316,6 +320,8 @@
     <Content Include="Scripts\pages\category-management.js" />
     <Content Include="Scripts\pages\customer-management.js" />
     <Content Include="Scripts\pages\employee-management.js" />
+    <Content Include="Scripts\pages\import-bill-insert-form.js" />
+    <Content Include="Scripts\pages\import-bill-management.js" />
     <Content Include="Scripts\pages\my-profile.js" />
     <Content Include="Scripts\pages\product-management.js" />
     <Content Include="Scripts\pages\supplier-management.js" />
@@ -349,6 +355,8 @@
     <Content Include="Views\Customer\CustomerManagement.cshtml" />
     <Content Include="Views\Bill\BillManagement.cshtml" />
     <Content Include="Views\Employee\ChangeProfile.cshtml" />
+    <Content Include="Views\ImportBill\ImportBillManagement.cshtml" />
+    <Content Include="Views\ImportBill\_ImportBillInsert.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -365,6 +373,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
