Gần xong cái import bill @@!

--- a/AutoAncillariesLimited/AutoAncillariesLimited/Web.config
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Web.config
@@ -77,4 +77,4 @@
     </compilers>
   </system.codedom>
   
-<connectionStrings><add name="AALEntities" connectionString="metadata=res://*/Models.AALModel.csdl|res://*/Models.AALModel.ssdl|res://*/Models.AALModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AAL;persist security info=True;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="AALEntities" connectionString="metadata=res://*/Models.AALModel.csdl|res://*/Models.AALModel.ssdl|res://*/Models.AALModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AAL;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
