--- a/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/AutoAncillariesLimited.csproj
@@ -153,7 +153,7 @@
     <Compile Include="Controllers\ImportBillController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\SupplierController.cs" />
-    <Compile Include="Controllers\WarehouseController.cs" />
+    <Compile Include="Controllers\WarehousesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -187,6 +187,8 @@
     </Compile>
     <Compile Include="Models\Dao\ImportBillDao.cs" />
     <Compile Include="Models\Dao\ImportBillDetailDao.cs" />
+    <Compile Include="Models\Dao\ProductDao.cs" />
+    <Compile Include="Models\Dao\WarehouseDetailDao.cs" />
     <Compile Include="Models\Employee.cs">
       <DependentUpon>AALModel.tt</DependentUpon>
     </Compile>
@@ -211,6 +213,9 @@
       <DependentUpon>AALModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Supplier.cs">
+      <DependentUpon>AALModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>AALModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\View_Models\ImportBillViewModel.cs" />
@@ -371,7 +376,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Images\" />
-    <Folder Include="Views\Warehouse\" />
+    <Folder Include="Views\Warehouses\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
