--- a/AutoAncillariesLimited/AutoAncillariesLimited/bin/AutoAncillariesLimited.dll.config
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/bin/AutoAncillariesLimited.dll.config
@@ -76,7 +76,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="AALEntities" connectionString="metadata=res://*/Models.AALModel.csdl|res://*/Models.AALModel.ssdl|res://*/Models.AALModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AAL;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="AALEntities" connectionString="metadata=res://*/Models.AALModel.csdl|res://*/Models.AALModel.ssdl|res://*/Models.AALModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AAL;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
